@@ -1139,6 +1139,7 @@ class FilterTest(QueryTest, AssertsCompiledSQL):
         eq_(sess.query(Item).filter(Item.keywords==None).order_by(Item.id).all(), [Item(id=4), Item(id=5)])
         eq_(sess.query(Item).filter(Item.keywords!=None).order_by(Item.id).all(), [Item(id=1),Item(id=2), Item(id=3)])
 
+
     def test_filter_by(self):
         User, Address = self.classes.User, self.classes.Address
 
@@ -1199,7 +1200,31 @@ class FilterTest(QueryTest, AssertsCompiledSQL):
             create_session().query(User.id).filter_by(**{}).order_by(User.id).all()
         )
 
+    def test_filter_conjunctions(self):
+        User = self.classes.User
+        s = create_session()
+        self.assert_compile(
+            s.query(User).filter(User.name=="ed", User.id>5),
+            "SELECT users.id AS users_id, users.name "
+            "AS users_name FROM users WHERE users.name = "
+            ":name_1 AND users.id > :id_1"
+        )
 
+        self.assert_compile(
+            s.query(User).filter_by(name='ed', id=5),
+            "SELECT users.id AS users_id, users.name "
+            "AS users_name FROM users WHERE users.name "
+            "= :name_1 AND users.id = :id_1"
+        )
+
+    def test_text_coerce(self):
+        User = self.classes.User
+        s = create_session()
+        self.assert_compile(
+            s.query(User).filter("name='ed'"),
+            "SELECT users.id AS users_id, users.name "
+            "AS users_name FROM users WHERE name='ed'"
+        )
 
 class SetOpsTest(QueryTest, AssertsCompiledSQL):
     __dialect__ = 'default'
